Got the code ready so the interns can hit the ground running!

--- a/Skyline.InternTrainingApp/ITA.ExternalServices.Tests.Integration/ITA.ExternalServices.Tests.Integration.csproj
+++ b/Skyline.InternTrainingApp/ITA.ExternalServices.Tests.Integration/ITA.ExternalServices.Tests.Integration.csproj
@@ -3,15 +3,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
+    <ProductVersion>
+    </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{915116F4-CBD5-4087-BA16-880233396B60}</ProjectGuid>
+    <ProjectGuid>{DDE34A3A-1D10-467A-99A2-038153D630A8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Skyline.InternTrainingApp.Common.Domain</RootNamespace>
-    <AssemblyName>Skyline.InternTrainingApp.Common.Domain</AssemblyName>
+    <RootNamespace>ITA.ExternalServices.Tests.Integration</RootNamespace>
+    <AssemblyName>ITA.ExternalServices.Tests.Integration</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,21 +33,32 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseClasses\DomainBase.cs" />
-    <Compile Include="Interfaces\IValidatableDomain.cs" />
+    <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
+      <Visible>False</Visible>
+    </CodeAnalysisDependentAssemblyPaths>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="RottenTomatoes\RottenTomatoesServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\Skyline.InternTrainingApp.Common\Skyline.InternTrainingApp.Common.csproj">
+      <Project>{487D19E5-7CC0-4BD6-A78D-1FFE8505A1AE}</Project>
+      <Name>Skyline.InternTrainingApp.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Skyline.InternTrainingApp.ExternalServices\Skyline.InternTrainingApp.ExternalServices.csproj">
+      <Project>{77E56F48-65D4-4D6A-91C8-A07A6B73599D}</Project>
+      <Name>Skyline.InternTrainingApp.ExternalServices</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
