--- a/Skyline.InternTrainingApp/Skyline.InternTrainingApp.UI.Web/packages.config
+++ b/Skyline.InternTrainingApp/Skyline.InternTrainingApp.UI.Web/packages.config
@@ -21,5 +21,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Modernizr" version="2.5.3" />
   <package id="Newtonsoft.Json" version="4.5.1" />
+  <package id="structuremap" version="2.6.3" />
   <package id="WebGrease" version="1.0.0" />
 </packages>
