--- a/Skyline.InternTrainingApp/packages/repositories.config
+++ b/Skyline.InternTrainingApp/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Skyline.InternTrainingApp.Common\packages.config" />
   <repository path="..\Skyline.InternTrainingApp.Data.Tests.Integration\packages.config" />
   <repository path="..\Skyline.InternTrainingApp.Data\packages.config" />
   <repository path="..\Skyline.InternTrainingApp.UI.Web\packages.config" />
